--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,14 @@ certifi==2025.8.3
 click==8.2.1
 distro==1.9.0
 fastapi==0.116.1
+gunicorn==23.0.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
 jiter==0.10.0
 openai==1.101.0
+packaging==25.0
 pydantic==2.11.7
 pydantic_core==2.33.2
 python-dotenv==1.1.1
